修正图片路径

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								<li>
 									<div class="img">
 										<a href="#">
-											<img src="/img/content/hot_list_pic1.gif"></a>
+											<img src="img/content/hot_list_pic1.gif"></a>
 									</div>
 									<div class="text">
 										<h3>
@@ -181,7 +181,7 @@
 								<li>
 									<div class="img">
 										<a href="#">
-											<img src="/img/content/hot_list_pic1.gif"></a>
+											<img src="img/content/hot_list_pic1.gif"></a>
 									</div>
 									<div class="text">
 										<h3>
@@ -200,7 +200,7 @@
 								<li>
 									<div class="img">
 										<a href="#">
-											<img src="/img/content/hot_list_pic1.gif"></a>
+											<img src="img/content/hot_list_pic1.gif"></a>
 									</div>
 									<div class="text">
 										<h3>
@@ -218,7 +218,7 @@
 								</li>
 							</ul>
 							<a class="more" href="#" title="更多">
-								<img src="./img/more.gif" alt="more"></a>
+								<img src="img/more.gif" alt="more"></a>
 						</div>
 					</div>
 				</div>
@@ -264,11 +264,11 @@
 									<li>2</li>
 									<li>
 										3
-										<img  class="active" src="/img/content/today1.gif" alt="today.jpg"></li>
+										<img  class="active" src="img/content/today1.gif" alt="today.jpg"></li>
 									<li>4</li>
 									<li>
 										5
-										<img class="img" src="/img/content/today1.gif"></li>
+										<img class="img" src="img/content/today1.gif"></li>
 									<li>6</li>
 									<li>7</li>
 									<li>8</li>
@@ -312,30 +312,30 @@
 							<ul>
 								<li>
 									<a href="#">
-										<img src="./img/content/img1.gif"></a>
+										<img src="img/content/img1.gif"></a>
 								</li>
 								<li>
 									<a href="#">
-										<img src="./img/content/img2.gif"></a>
+										<img src="img/content/img2.gif"></a>
 								</li>
 								<li>
 									<a href="#">
-										<img src="./img/content/img3.gif"></a>
+										<img src="img/content/img3.gif"></a>
 								</li>
 								
 							</ul>
 							<ol>
 								<li class="active">
 									<a href="#">
-										<img src="/img/content/img1.gif"></a>
+										<img src="img/content/img1.gif"></a>
 								</li>
 								<li>
 									<a href="#">
-										<img src="/img/content/img2.gif"></a>
+										<img src="img/content/img2.gif"></a>
 								</li>
 								<li>
 									<a href="#">
-										<img src="/img/content/img3.gif"></a>
+										<img src="img/content/img3.gif"></a>
 								</li>
 							</ol>
 							<p>说明的文字</p>
@@ -374,7 +374,7 @@
 						<span>论坛</span>
 					</strong>
 					<a href="#" title="更多">
-						<img src="./img/more.gif" alt="more"></a>
+						<img src="img/more.gif" alt="more"></a>
 				</h2>
 				<ol>
 					<li class="active">
@@ -441,7 +441,7 @@
 
 			<div class="main_ad">
 				<a href="#">
-					<img src="./img/ad/ad1.jpg"></a>
+					<img src="img/ad/ad1.jpg"></a>
 			</div>
 			<!-- 广告区结束 -->
 
@@ -453,7 +453,7 @@
 							<span>知道份子</span>
 						</strong>
 						<a href="#" title="更多">
-							<img src="./img/more.gif" alt="more"></a>
+							<img src="img/more.gif" alt="more"></a>
 					</h2>
 					<div class="tab">
 						<ul>
@@ -490,7 +490,7 @@
 
 								</span>
 
-								<span class="col_2"><img src="/img/ico1.gif"></span>
+								<span class="col_2"><img src="img/ico1.gif"></span>
 
 							</li>
 							<li>
@@ -504,7 +504,7 @@
 
 								</span>
 
-								<span class="col_2"><img src="/img/ico2.gif"></span>
+								<span class="col_2"><img src="img/ico2.gif"></span>
 
 							</li>
 							<li>
@@ -518,7 +518,7 @@
 
 								</span>
 
-								<span class="col_2"><img src="/img/ico1.gif"></span>
+								<span class="col_2"><img src="img/ico1.gif"></span>
 
 							</li>
 							<li>
@@ -532,7 +532,7 @@
 
 								</span>
 
-								<span class="col_2"><img src="/img/ico2.gif"></span>
+								<span class="col_2"><img src="img/ico2.gif"></span>
 
 							</li>
 							<li>
@@ -546,7 +546,7 @@
 
 								</span>
 
-								<span class="col_2"><img src="/img/ico1.gif"></span>
+								<span class="col_2"><img src="img/ico1.gif"></span>
 
 							</li>
 						</ul>
@@ -559,7 +559,7 @@
 							<span>红人烧客</span>
 						</strong>
 						<a href="#" title="更多">
-							<img src="./img/more.gif" alt="more"></a>
+							<img src="img/more.gif" alt="more"></a>
 					</h2>
 				</div>
 			</div>
@@ -573,7 +573,7 @@
 							<span>在线帮助</span>
 						</strong>
 						<a href="#" title="更多">
-							<img src="./img/more.gif" alt="more"></a>
+							<img src="img/more.gif" alt="more"></a>
 					</h2>
 				</div>
 				<div class="section fr">
@@ -583,7 +583,7 @@
 							<span>媒体声音</span>
 						</strong>
 						<a href="#" title="更多">
-							<img src="./img/more.gif" alt="more"></a>
+							<img src="img/more.gif" alt="more"></a>
 					</h2>
 				</div>
 			</div>
@@ -615,8 +615,8 @@
 				</form>
 			</div>
 			<p>
-				<a href="http://www.miaov.com/2013">新用户注册</a>
-				<a href="http://www.miaov.com/2013">忘记密码了</a>
+				<a href="#">新用户注册</a>
+				<a href="#">忘记密码了</a>
 			</p>
 		</div>
 
@@ -714,7 +714,7 @@
 						<li>
 							<div class="img">
 								<a href="#">
-									<img src="/img/content/pic1.gif">
+									<img src="img/content/pic1.gif">
 								</a>
 							</div>
 							<div class="text">
@@ -732,7 +732,7 @@
 						<li>
 							<div class="img">
 								<a href="#">
-									<img src="/img/content/pic1.gif">
+									<img src="img/content/pic1.gif">
 								</a>
 							</div>
 							<div class="text">
@@ -750,7 +750,7 @@
 						<li>
 							<div class="img">
 								<a href="#">
-									<img src="/img/content/pic1.gif">
+									<img src="img/content/pic1.gif">
 								</a>
 							</div>
 							<div class="text">
@@ -792,7 +792,7 @@
 						<li>
 							<div class="img">
 								<a href="#">
-									<img src="/img/content/pic1.gif"></a>
+									<img src="img/content/pic1.gif"></a>
 							</div>
 							<div class="text">
 								<h3>
@@ -869,7 +869,7 @@
 						<li>
 							<div class="img">
 								<a href="#">
-									<img src="/img/content/pic1.gif"></a>
+									<img src="img/content/pic1.gif"></a>
 							</div>
 							<div class="text">
 								<h3>
@@ -888,7 +888,7 @@
 						<li>
 							<div class="img">
 								<a href="#">
-									<img src="/img/content/pic1.gif"></a>
+									<img src="img/content/pic1.gif"></a>
 							</div>
 							<div class="text">
 								<h3>
